--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
                 <h3 id="result_label">I can hear-</h3>
                 <h4 id="result_confidence">Accuracy-</h4>
                 <br>
-                <img src="image.png" id="cat" width="300" hieght="300">
-                <img src="image.png" id="dog" width="300" hieght="300">
-                <img src="image.png" id="lion" width="300" hieght="300">
-                <img src="image.png" id="background" width="300" hieght="300">
+                <img src="Thinking-of-getting-a-cat.png" id="cat" width="300" hieght="300">  
                 </center>
                 </div>
                 <div class="copy_right_footer">
                   Developed by-krishna
                 </div>
             <script src="main.js"></script>
+            <script src="style.css"></script>
         </body>   
 </html>
