--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
        <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js" 
        type="text/javascript"></script> 
        <meta name="veiwport" content="width=device-width,initialscale=1.0">
@@ -19,13 +20,13 @@
                 <h3 id="result_label">I can hear-</h3>
                 <h4 id="result_confidence">Accuracy-</h4>
                 <br>
-                <img src="Thinking-of-getting-a-cat.png" id="cat" width="300" hieght="300">  
+                <img src="ear.png" id="ear" width="300" height="300">  
                 </center>
                 </div>
                 <div class="copy_right_footer">
                   Developed by-krishna
                 </div>
             <script src="main.js"></script>
-            <script src="style.css"></script>
+         
         </body>   
 </html>
